[gd_scene load_steps=3 format=3 uid="uid://bcl3ckgon06l0"]

[ext_resource type="Script" path="res://npc/npc.gd" id="2_b68qg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y35fu"]
radius = 19.0263

[node name="npc" type="Area2D"]
z_index = -1
collision_mask = 3
script = ExtResource("2_b68qg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y35fu")

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_area_shape_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
